--- a/src/Components/UserInfo.module.css
+++ b/src/Components/UserInfo.module.css
@@ -22,3 +22,15 @@
   color: white;
 
 }
+
+.editButton{
+  color: white;
+  margin-left: 1rem;
+  cursor: pointer;
+  
+}
+
+.editButton:hover{
+  color: #737373;
+
+}
