--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -12,10 +12,18 @@
 }
 
 .header button {
+  cursor: pointer;
   font-family: 'Kanit', sans-serif;
   background-color: #711a75;
   color: white;
   border-style: none;
   font-size: medium;
   margin: 1rem;
+  transition: 250ms;
+
+}
+
+.header button:hover{
+  font-size: large;
+  transition: 250ms;
 }
